# wookieLM

./: .gitignore  README.md  count.py  extract_books.py  fetch_continuity.py  generate_fact.py  generate_qa.py  pyproject.toml  subtitles.py  tag_continuity.py  wikipedia.py  wookieepedia_to_markdown.py
continuity/: canon_titles.txt  legends_titles.txt  noncanon_titles.txt
docs/: data_sources.md
src/wookielm/: __init__.py  count.py  extract_books.py  fetch_continuity.py  generate_fact.py  paths.py  subtitles.py  tag_continuity.py  wikipedia.py  wookieepedia_to_markdown.py
tasks/: todo.md
