[project]
name = "wookielm"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=2.4.0",
    "lxml>=6.1.1",
    "mwparserfromhell>=0.7.2",
    "mwxml>=0.3.8",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "tqdm>=4.67.3",
]
