[project]
name = "wookielm"
version = "0.1.0"
description = "A pipeline for building a multi-source Star Wars text corpus and a synthetic facts dataset for LLM training."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=2.4.0",
    "lxml>=6.1.1",
    "mwparserfromhell>=0.7.2",
    "mwxml>=0.3.8",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
# Only subtitles.py `api` mode needs an HTTP client (OpenSubtitles REST API).
subtitles = ["requests>=2.32"]

[project.scripts]
wookiee-wookieepedia     = "wookielm.wookieepedia_to_markdown:main"
wookiee-wikipedia        = "wookielm.wikipedia:main"
wookiee-subtitles        = "wookielm.subtitles:main"
wookiee-extract-books    = "wookielm.extract_books:main"
wookiee-generate-fact    = "wookielm.generate_fact:main"
wookiee-fetch-continuity = "wookielm.fetch_continuity:main"
wookiee-tag-continuity   = "wookielm.tag_continuity:main"
wookiee-count            = "wookielm.count:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wookielm"]
